--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -1,39 +1,46 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.phuongdtran.stockperformance</groupId>
-  <artifactId>stock-performance</artifactId>
-  <version>1.0</version>
-  <name>stock-performance</name>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.sparkjava</groupId>
-  		<artifactId>spark-core</artifactId>
-  		<version>2.7.1</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>com.sparkjava</groupId>
-  		<artifactId>spark-debug-tools</artifactId>
-  		<version>0.5</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>com.sparkjava</groupId>
-  		<artifactId>spark-template-velocity</artifactId>
-  		<version>2.3</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-simple</artifactId>
-		<version>1.7.13</version>
-  	</dependency>
-  	
-  	<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.phuongdtran.stockperformance</groupId>
+	<artifactId>stock-performance</artifactId>
+	<version>1.0</version>
+	<name>stock-performance</name>
+	<dependencies>
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-debug-tools</artifactId>
+			<version>0.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-template-velocity</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.13</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mindrot</groupId>
 			<artifactId>jbcrypt</artifactId>
 			<version>0.3m</version>
 		</dependency>
-		
-  </dependencies>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.6</version>
+		</dependency>
+
+	</dependencies>
 </project>
