--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.6</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.39</version>
+		</dependency>
 
 	</dependencies>
 </project>
