--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spark-react-example",
-  "version": "0.2.0",
+  "name": "stock-performance",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -12,7 +12,7 @@
     "Recharts",
     "NodeJS"
   ],
-  "author": "Nathan Scandella",
+  "author": "Phuong Tran,Nathan Scandella",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,11 +24,13 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.11.0"
   },
   "dependencies": {
     "babel-plugin-recharts": "^1.1.1",
     "jquery": "^3.3.1",
+    "moment": "^2.20.1",
+    "react-datepicker": "^1.1.0",
     "recharts": "^1.0.0-beta.10"
   },
   "description": "Web resources for sample spark-java and React JS webapp"
