--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "babel-plugin-recharts": "^1.1.1",
     "jquery": "^3.3.1",
+    "moment": "^2.20.1",
     "react-addons-update": "^15.6.2",
     "recharts": "^1.0.0-beta.10"
   },
