--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -27,6 +27,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "babel-plugin-recharts": "^1.1.1",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
