--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -16,12 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.11.0"
@@ -29,8 +29,9 @@
   "dependencies": {
     "async": "^2.6.0",
     "babel-plugin-recharts": "^1.1.1",
+    "halogenium": "^2.2.3",
     "jquery": "^3.3.1",
-    "moment": "^2.20.1",
+    "moment": "^2.21.0",
     "react-addons-update": "^15.6.2",
     "recharts": "^1.0.0-beta.10"
   },
