--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -32,6 +32,7 @@
     "halogenium": "^2.2.3",
     "jquery": "^3.3.1",
     "moment": "^2.21.0",
+    "pubsub-js": "^1.6.0",
     "react-addons-update": "^15.6.2",
     "recharts": "^1.0.0-beta.10"
   },
