changed host name to 127.0.0.1

--- a/sources/src/main/resources/config/mysql.properties
+++ b/sources/src/main/resources/config/mysql.properties
@@ -1,5 +1,5 @@
 #store properties connecting to MySQL database
-hostname=localhost
+hostname=127.0.0.1
 port=3306
 dbname=stock_performance
 username=stock
