--- a/sources/webpack/package.json
+++ b/sources/webpack/package.json
@@ -16,15 +16,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.11.0"
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "async": "^2.6.0",
