--- a/src/main/resources/config/mysql.properties
+++ b/src/main/resources/config/mysql.properties
@@ -1,6 +1,6 @@
 #store properties connecting to MySQL database
 hostname=127.0.0.1
-port=3306
-dbname=stock_performance
-username=stock
-password=Stock
+port=7687
+#dbname=stock_performance
+username=neo4j
+password=S2duyphuong
