--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,6 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.6",
     "date-fns": "^2.12.0",
-    "immutability-helper": "^3.0.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
