--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.phuongdtran.stockperformance</groupId>
 	<artifactId>stock-performance</artifactId>
-	<version>1.0</version>
+	<version>2.0</version>
 	<name>stock-performance</name>
 	<build>
 		<plugins>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
-				<archive> <manifest> <mainClass>com.phuongdtran.StockApplication</mainClass> 
-				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> </configuration> </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -32,6 +28,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
 					<execution>
@@ -138,13 +135,6 @@
 			<version>4.2.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-jdbc-driver -->
-<!--		<dependency>-->
-<!--			<groupId>org.neo4j</groupId>-->
-<!--			<artifactId>neo4j-jdbc-driver</artifactId>-->
-<!--			<version>3.1.0</version>-->
-<!--		</dependency>-->
-		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-collections -->
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-collections</artifactId>
