--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.trevortran</groupId>
-	<artifactId>stock-performance</artifactId>
+	<artifactId>stock-comparator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>stock-performance</name>
-	<description>stock performance project</description>
+	<name>stock-comparator</name>
+	<description>stock comparator project</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
