--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.config.import=mysql.properties
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${DATABASE}?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stockcomparator?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
