change logging path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.generate-ddl=true
 #spring.jpa.show-sql=true
-logging.file.path=./src/main/logs
+logging.file.path=./log
 logging.level.root=info
 logging.level.org.springframework.http=debug
 logging.level.org.springframework.web=debug
