--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stockcomparator?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-spring.datasource.username=trevor
-spring.datasource.password=
+spring.datasource.username=""
+spring.datasource.password=""
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.generate-ddl=true
 #spring.jpa.show-sql=true
-logging.file.path=./log
+logging.file.path=./logs
 logging.level.root=info
 logging.level.org.springframework.http=debug
 logging.level.org.springframework.web=debug
-logging.level.org.hibernate.sql=info
-logging.level.org.springframework.boot=info
