--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8181
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stockcomparator?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=""
